test/code/test_class_interface_extends_error1.out

Fatal error: Class A cannot extend from interface B in {{CWD}}/test/code/test_class_interface_extends_error1.php on line 4
