test/code/test_class_interface_extends_error1.php
<?php

interface B {}
class A extends B {}

